# ch0

./: .gitignore  CHANGELOG.md  README.md  main.py  pyproject.toml
src/ch0/: cli.py
src/ch0/engines/: sunfish.py  uci.py
src/ch0/engines/andoma/: communication.py  movegeneration.py
src/ch0/engines/sunfish/: main.py  sunfish.py  sunfish_nnue.py
src/ch0/engines/sunfish/nnue/: speed_tests.py  sunfish2.py  sunfish_king.py
src/ch0/engines/sunfish/tools/: fancy.py  tester.py  uci.py
tests/: test_cli_core.py  test_cli_interaction.py
