[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "ch0"
version = "0.2.1"
description = "Blindfold chess CLI with built-in engines"
readme = "README.md"
requires-python = ">=3.13"
authors = [{ name = "menisadi" }]
license = { file = "LICENSE" }
dependencies = [
    "chess>=1.11.2",
]
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
]

[project.urls]
Homepage = "https://github.com/menisadi/ch0"
Repository = "https://github.com/menisadi/ch0"

[project.scripts]
ch0 = "ch0.cli:main"

[tool.hatch.build]
exclude = [
    "src/ch0/engines/stockfish_8_x64/**",
    "src/ch0/engines/stockfish-191-64-ja/**",
    "src/ch0/engines/sunfish/docs/**",
    "src/ch0/engines/sunfish/nnue/**",
    "src/ch0/engines/sunfish/sunfish_nnue.py",
    "src/ch0/engines/sunfish/tools/**",
    "**/__pycache__/**",
]

[tool.hatch.build.targets.wheel]
packages = ["src/ch0"]
